# GRETAprojects

./: .gitignore  INSTALL.md  LICENCE  README.md  api.wsgi  ch2_keith.py  challenge3.py  challenge_2.py  challenge_3.py  challenge_4-2.py  challenge_4.py  contagion notes.py  financialcontagion.py  hello_world.py  oct2_api_analysis.py  oct2_financial_contagion.py  pymaybe.py  request_example.py  request_example_hansard.py  requirements.txt  setup.cfg  setup.py
flask-tutorial/: .gitignore
src/example_package_keithdev2/: README.md  example2.py  pyproject.toml
src/projectwilliamsville/: api.py  example.py  fmp_fetch.py  fmpapi2.py  fmpschedule.csv  hansard.py  hansard_0.1.py  helpers.py  jasontest.py  keith_mood.py  module_tester.py  providor.py
text_analysis_trials/: 1stTxtAnalyser.py  Argonauts.py  Extra Credit.py  Json_hints.py  my_helper_file.py  simple_opener.py  text_analyser_example.py  text_importer.py  text_importer3.py
