[pylint]
ignore=archive

[pylint.FORMAT]
max-line-length=120

[pylint.BASIC]
# these are not good names, but to save massive error lists
good-names=i,j,k,x,n,df,e,q,G,AIB,wAIB,LIB,wLIB,IB,AM,D,v,w

[pylint.REPORTS]
output-format=colorized

[metadata]
name = projectwilliamsville
version = 0.0.1
author = ThinJetty Ltd.
author_email = info@ThinJetty.com
description = Content Analytics Application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://thinjetty.com
project_urls =
    Web = https://thinjetty.com
classifipytpyers =
    Programming Language :: Python :: 3
    License :: All Rights Reserved
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.12

[options.packages.find]
where = src