[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_keithdev2"
version = "0.0.1"
authors = [
    { name = "Keith Crawford", email = "keithcrawford80@hotmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3,
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"